fix column gap as subtitle as overflowing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -793,6 +793,10 @@ textarea {
     padding-top: 1vh;
   }
 
+  .resume-main-container {
+    column-gap: 0.5vh;
+  }
+
   .resume-work-summary p,
   .resume-education p,
   .resume-right-container li,
